--- a/dstintuc.html
+++ b/dstintuc.html
@@ -17,6 +17,7 @@
     <!-- menu -->
     <link rel="stylesheet" type="text/css" href="./assets/css/mmenu.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/menuMobile.css">
 </head>
 
 <body>
@@ -55,6 +56,29 @@
             </ul>
         </div>
     </div>
+
+    <div id="page" style="display: none;">
+        <div class="header">
+            <a href="#menu-mobile"><span></span></a>
+        </div>
+        <nav id="menu-mobile">
+            <ul>
+                <li><a href="#">Trang chủ</a></li>
+                <li>
+                    <a href="" class="ative">Giới thiệu</a>
+                </li>
+                <li><a href="#contact">Doanh nghiệp</a></li>
+                <li><a href="http://">Đất đai - nhà ở</a></li>
+                <li><a href="http://">Đầu tư</a></li>
+                <li><a href="http://">Thuế - kế toán</a></li>
+                <li><a href="http://">Tranh tụng</a></li>
+                <li><a href="http://">Thủ tục hành chính</a></li>
+                <li><a href="http://">Tin tức</a></li>
+                <li><a href="http://">Liên hệ</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div id="body">
         <div class="container body_content">
             <div class="row box-new">
@@ -82,10 +106,13 @@
                                         <img src="./assets/images/dstintuc.png" alt="">
                                     </div>
                                     <div class="col-8">
-                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu
+                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng
+                                            cảnh báo, hàng ngàn người điêu
                                             đứng</p>
-                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu, 11/6/2021</span>
-                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
+                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu,
+                                            11/6/2021</span>
+                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban
+                                            chuyên gia" của sàn này cũng
                                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay
                                             28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                             Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã
@@ -99,10 +126,13 @@
                                         <img src="./assets/images/dstintuc.png" alt="">
                                     </div>
                                     <div class="col-8">
-                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu
+                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng
+                                            cảnh báo, hàng ngàn người điêu
                                             đứng</p>
-                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu, 11/6/2021</span>
-                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
+                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu,
+                                            11/6/2021</span>
+                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban
+                                            chuyên gia" của sàn này cũng
                                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay
                                             28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                             Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã
@@ -116,10 +146,13 @@
                                         <img src="./assets/images/dstintuc.png" alt="">
                                     </div>
                                     <div class="col-8">
-                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu
+                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng
+                                            cảnh báo, hàng ngàn người điêu
                                             đứng</p>
-                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu, 11/6/2021</span>
-                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
+                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu,
+                                            11/6/2021</span>
+                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban
+                                            chuyên gia" của sàn này cũng
                                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay
                                             28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                             Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã
@@ -133,10 +166,13 @@
                                         <img src="./assets/images/dstintuc.png" alt="">
                                     </div>
                                     <div class="col-8">
-                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu
+                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng
+                                            cảnh báo, hàng ngàn người điêu
                                             đứng</p>
-                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu, 11/6/2021</span>
-                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
+                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu,
+                                            11/6/2021</span>
+                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban
+                                            chuyên gia" của sàn này cũng
                                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay
                                             28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                             Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã
@@ -150,10 +186,13 @@
                                         <img src="./assets/images/dstintuc.png" alt="">
                                     </div>
                                     <div class="col-8">
-                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu
+                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng
+                                            cảnh báo, hàng ngàn người điêu
                                             đứng</p>
-                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu, 11/6/2021</span>
-                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
+                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu,
+                                            11/6/2021</span>
+                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban
+                                            chuyên gia" của sàn này cũng
                                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay
                                             28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                             Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã
@@ -167,10 +206,13 @@
                                         <img src="./assets/images/dstintuc.png" alt="">
                                     </div>
                                     <div class="col-8">
-                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu
+                                        <p class="dstin_list-item-title">NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng
+                                            cảnh báo, hàng ngàn người điêu
                                             đứng</p>
-                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu, 11/6/2021</span>
-                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
+                                        <span class="dstin_list-item-date"><i class="las la-stop"></i>Thứ sáu,
+                                            11/6/2021</span>
+                                        <p class="dstin_list-item-text">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban
+                                            chuyên gia" của sàn này cũng
                                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay
                                             28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                             Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã
@@ -181,13 +223,15 @@
                             <div class="navigation">
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
-                                      <li class="page-item"><a class="page-link" href="#"><i class="las la-angle-left"></i></a></li>
-                                      <li class="page-item page-active"><a class="page-link" href="#">1</a></li>
-                                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                      <li class="page-item"><a class="page-link" href="#"><i class="las la-angle-right"></i></a></li>
+                                        <li class="page-item"><a class="page-link" href="#"><i
+                                                    class="las la-angle-left"></i></a></li>
+                                        <li class="page-item page-active"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item"><a class="page-link" href="#"><i
+                                                    class="las la-angle-right"></i></a></li>
                                     </ul>
-                                  </nav>
+                                </nav>
                             </div>
                         </div>
                     </div>
