--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
   <!-- menu -->
   <link rel="stylesheet" type="text/css" href="./assets/css/mmenu.css">
-  <link rel="stylesheet" href="./assets/scss/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/menuMobile.css">
 </head>
 
