--- a/tintuc.html
+++ b/tintuc.html
@@ -17,6 +17,7 @@
     <!-- menu -->
     <link rel="stylesheet" type="text/css" href="./assets/css/mmenu.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/menuMobile.css">
 </head>
 
 <body>
@@ -55,6 +56,29 @@
             </ul>
         </div>
     </div>
+
+    <div id="page" style="display: none;">
+        <div class="header">
+            <a href="#menu-mobile"><span></span></a>
+        </div>
+        <nav id="menu-mobile">
+            <ul>
+                <li><a href="#">Trang chủ</a></li>
+                <li>
+                    <a href="" class="ative">Giới thiệu</a>
+                </li>
+                <li><a href="#contact">Doanh nghiệp</a></li>
+                <li><a href="http://">Đất đai - nhà ở</a></li>
+                <li><a href="http://">Đầu tư</a></li>
+                <li><a href="http://">Thuế - kế toán</a></li>
+                <li><a href="http://">Tranh tụng</a></li>
+                <li><a href="http://">Thủ tục hành chính</a></li>
+                <li><a href="http://">Tin tức</a></li>
+                <li><a href="http://">Liên hệ</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div id="body">
         <div class="container body_content">
             <div class="row box-new">
@@ -66,39 +90,55 @@
                         </div>
                         <div class="box-p">Sàn ngoại hối Fxtradingmarkets đã bị sập và "ban chuyên gia" của sàn này cũng
                             ngừng giao dịch khiến hàng ngàn nạn nhân điêu đứng.Từ đêm 27-6 đến sáng nay 28-6, hàng ngàn
-                            người truyền tai nhau về thông tin sàn ngoại hối Fxtradingmarkets đã sập hoàn toàn và trang web
+                            người truyền tai nhau về thông tin sàn ngoại hối Fxtradingmarkets đã sập hoàn toàn và trang
+                            web
                             giao dịch của sàn này đã không thể truy cập.</div>
                         <div class="box-text">
                             <p>Từ đêm 27-6 đến sáng nay 28-6, hàng ngàn người truyền tai nhau về thông tin sàn ngoại hối
                                 Fxtradingmarkets đã sập hoàn toàn và trang web giao dịch của sàn này đã không thể truy
                                 cập.<br><br>
-                                Các nạn nhân của sàn này đã nhận được "tâm thư" xin lỗi của nhóm Lion nói về lý do đóng cửa
+                                Các nạn nhân của sàn này đã nhận được "tâm thư" xin lỗi của nhóm Lion nói về lý do đóng
+                                cửa
                                 sàn và hứa hẹn sẽ quay trở lại trong thời gian tới.<br><br>
-                                Một trong những thủ lĩnh của sàn Fxtradingmarkets gửi tin cho những người đã đầu tư: "Iker
+                                Một trong những thủ lĩnh của sàn Fxtradingmarkets gửi tin cho những người đã đầu tư:
+                                "Iker
                                 tin và biết rằng đồng FXT của chúng ta như 1 cánh phượng hoàng lửa trải qua bao đau đớn,
                                 nguy nan đang sắp sửa tái sinh trên ngọn lửa vàng, tỏa sáng huy hoàng như sự thịnh vượng
-                                trong tương lai sắp đến của cộng đồng chúng ta...Qua đây, chúng tôi xin thông báo với tất cả
+                                trong tương lai sắp đến của cộng đồng chúng ta...Qua đây, chúng tôi xin thông báo với
+                                tất cả
                                 những chiến binh của mái nhà Lion rằng từ 26/6 tới tập thể Lion sẽ tạm thời phân tách để
-                                cùng bước vào quá trình thử lửa và tôi luyện ý chí. Sàn FXTradingMarkets sẽ chính thức tạm
+                                cùng bước vào quá trình thử lửa và tôi luyện ý chí. Sàn FXTradingMarkets sẽ chính thức
+                                tạm
                                 dừng hoạt động và Ban Chuyên Gia cũng tạm dừng giao dịch".<br>
                                 <img src="./assets/images/Layer 577.png" alt="">
-                                Trước đó, Báo Người Lao Động từng nhiều lần cảnh báo rủi ro khi giao dịch các sàn ngoại hối.
-                                Công an TP HCM cảnh báo, khuyến cáo người dân cần phải tỉnh táo trước những lời quảng cáo
-                                đường mật lợi nhuận cao, lợi nhuận "khủng" của các hình thức kinh doanh ngoại hối. Trong đó,
-                                Công an TP HCM đưa ra phương thức, thủ đoạn của sàn Fxtradingmarkets và Lion Teams.<br><br>
-                                Theo Công an TP HCM, sàn Fxtradingmarkets sử dụng tên miền Fxtradingmarkets.com đăng ký và
+                                Trước đó, Báo Người Lao Động từng nhiều lần cảnh báo rủi ro khi giao dịch các sàn ngoại
+                                hối.
+                                Công an TP HCM cảnh báo, khuyến cáo người dân cần phải tỉnh táo trước những lời quảng
+                                cáo
+                                đường mật lợi nhuận cao, lợi nhuận "khủng" của các hình thức kinh doanh ngoại hối. Trong
+                                đó,
+                                Công an TP HCM đưa ra phương thức, thủ đoạn của sàn Fxtradingmarkets và Lion
+                                Teams.<br><br>
+                                Theo Công an TP HCM, sàn Fxtradingmarkets sử dụng tên miền Fxtradingmarkets.com đăng ký
+                                và
                                 đặt máy chủ tại Mỹ. Để giao dịch, người tham gia phải đăng ký mở tài khoản trên sàn
-                                Extradingmarkets và bắt buộc phải có thông tin mã ID của người giới thiệu cấp trên. Nhằm thu
-                                hút người tham gia, sàn Fxtradingmarkets sử dụng phương thức kinh doanh đa cấp, theo đó hệ
+                                Extradingmarkets và bắt buộc phải có thông tin mã ID của người giới thiệu cấp trên. Nhằm
+                                thu
+                                hút người tham gia, sàn Fxtradingmarkets sử dụng phương thức kinh doanh đa cấp, theo đó
+                                hệ
                                 thống của sàn có 5 cấp bậc và cấp trên sẽ được thưởng hoa hồng dựa vào số lượng giao
                                 dịch/nạp tiền của cấp dưới.<br>
                                 NÓNG: Sập sàn ngoại hối mà Công an TP HCM từng cảnh báo, hàng ngàn người điêu đứng - Ảnh
                                 2.<br>
                                 Báo Người Lao Động nhiều lần cảnh báo rủi ro khi đầu tư ngoại hối<br><br>
-                                Sàn Fxtradingmarkets tổ chức cho người tham gia giao dịch theo hình thức quyền chọn nhị phân
-                                (Binary option) với 8 cấp ngoại tệ. Trong thời gian 30 giây, người tham gia sẽ đặt lệnh dự
-                                đoán tỷ giá cặp ngoại tệ lên hoặc xuống, nếu đoán trúng sẽ được thêm 95% giá trị đặt cọc,
-                                nếu thua sẽ mất tiền cược. Số tiền cược từng lệnh giao dịch thông qua 1 ví tiền kỹ thuật số
+                                Sàn Fxtradingmarkets tổ chức cho người tham gia giao dịch theo hình thức quyền chọn nhị
+                                phân
+                                (Binary option) với 8 cấp ngoại tệ. Trong thời gian 30 giây, người tham gia sẽ đặt lệnh
+                                dự
+                                đoán tỷ giá cặp ngoại tệ lên hoặc xuống, nếu đoán trúng sẽ được thêm 95% giá trị đặt
+                                cọc,
+                                nếu thua sẽ mất tiền cược. Số tiền cược từng lệnh giao dịch thông qua 1 ví tiền kỹ thuật
+                                số
                                 (mã FXT token) do các đối tượng quản trị sàn Fxtradingmarkets tạo ra. Để nạp và rút tiền
                                 trên sàn, người chơi phải có tài khoản tại website Fxexchange.io hoặc bilaxy.com.
                             </p>
@@ -109,7 +149,8 @@
                         <ul class="box-related-news-list">
                             <li><a href="">Công đoàn PV GAS chào mừng vị “Thủ lĩnh” mới</a></li>
                             <li><a href="">PV GAS công bố quyết định bổ nhiệm cán bộ năm 2021</a></li>
-                            <li><a href="">PV GAS ủng hộ 1,5 tỷ đồng cho chương trình phòng chống Covid tại Bệnh viện K Hà Nội</a></li>
+                            <li><a href="">PV GAS ủng hộ 1,5 tỷ đồng cho chương trình phòng chống Covid tại Bệnh viện K
+                                    Hà Nội</a></li>
                             <li><a href="">Phòng chống đại dịch Covid bằng những hành động thiết thực</a></li>
                             <li><a href="">PV GAS D tăng cường tuyên truyền công tác an toàn vệ sinh lao động</a></li>
                         </ul>
